force-app/main/default/objects/RecordType__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Integration_Object__mdt</referenceTo>
    <relationshipLabel>RecordTypes</relationshipLabel>
    <relationshipName>RecordTypes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>