force-app/main/default/objects/RecordType__mdt/fields/Paso_inicial__c.field-meta.xml
<CustomField>
    <fullName>Paso_inicial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paso inicial</label>
    <type>Checkbox</type>
</CustomField>