force-app/main/default/objects/RecordType__mdt/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <label>RecordType Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>